--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
   <title>l'atelier</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />  
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Lato|Material+Icons">
 </head>
 
 <body>
