--- a/private/loader.html
+++ b/private/loader.html
@@ -1,22 +1,9 @@
 <div id="inject-loader-wrapper">
     <style type="text/css">
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-html, body {
-  width: 100%;
-  height: 100%;
-}
 
-body {
+.loading {
   font-family: 'Courier';
-  overflow: hidden;
-}
-
-h1 {
   position: absolute;
   height: 40px;
   margin: auto;
@@ -32,7 +19,7 @@ h1 {
   color: black;
 }
 
-h1::after {
+.loading::after {
   animation: txt 3s infinite;
   content: "";
 }
@@ -66,5 +53,5 @@ h1::after {
   }
 }
 </style>
-<h1><span>### CHARGEMENT EN COURS </span> </h1>
-</span>
+<h1 class="loading"><span>### CHARGEMENT EN COURS </span> </h1>
+</div>
