--- a/private/loader.html
+++ b/private/loader.html
@@ -7,7 +7,7 @@
   position: absolute;
   height: 40px;
   margin: auto;
-  top: 00px;
+  top: 180px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -52,6 +52,19 @@
     content: "\\";
   }
 }
+#logo {
+  position: absolute;
+  height: 40px;
+  margin: auto;
+  top: 0px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  width: 600px;
+  height: 500px;
+}
 </style>
-<h1 class="loading"><span>### CHARGEMENT EN COURS </span> </h1>
+<img id="logo" src="/img/logo.png">
+<h1 class="loading"><span>CHARGEMENT</span> </h1>
 </div>
